node-version-updated

--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "vite": "^5.0.8"
-  }
+  },
+  "engines": {
+  "node": "22.x"
+}
+
 }
